--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,28 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: inherit;
+     -moz-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+:root {
+  --nav-bg-color: #111;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 62.5%; /* 10px %  = 10/16 px */
+}
+
+body {
+  overflow: hidden;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.6rem; /* 16px = 1.6 * root font-size */
+}
+
 
